// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<date-picker> demo: > render [basic] correctly 1`] = `
<div class="sd-picker sd-picker-size-medium sd:w-50" visible="false">
  <!--v-if-->
  <div class="sd-picker-input"><input placeholder="请选择日期" class="sd-picker-start-time"></div>
  <div class="sd-picker-suffix">
    <!--v-if--><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
    <!--v-if-->
  </div>
</div>
`;

exports[`<date-picker> demo: > render [control] correctly 1`] = `
<div class="sd-space sd-space-horizontal sd-space-align-center" style="column-gap: 8px; row-gap: 8px;">
  <!---->
  <div class="sd-space-item">
    <div class="sd-picker sd-picker-size-medium sd:w-50" visible="false">
      <!--v-if-->
      <div class="sd-picker-input"><input placeholder="请选择日期" class="sd-picker-start-time" value="2026-04-16"></div>
      <div class="sd-picker-suffix"><span class="sd-icon-hover sd-picker-icon-hover sd-picker-clear-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-close" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"></path></svg></span><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
        <!--v-if-->
      </div>
    </div>
    <!---->
  </div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-picker sd-picker-range sd-picker-size-medium sd:w-75" visible="false">
      <!--v-if-->
      <div class="sd-picker-input sd-picker-input-active"><input placeholder="开始日期" value="2026-04-16"></div><span class="sd-picker-separator">-</span>
      <div class="sd-picker-input"><input placeholder="结束日期" value="2026-04-16"></div>
      <div class="sd-picker-suffix"><span class="sd-icon-hover sd-picker-icon-hover sd-picker-clear-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-close" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"></path></svg></span><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
        <!--v-if-->
      </div>
    </div>
    <!---->
  </div>
</div>
`;

exports[`<date-picker> demo: > render [date-render] correctly 1`] = `
<div class="sd-picker sd-picker-size-medium" visible="false">
  <!--v-if-->
  <div class="sd-picker-input"><input placeholder="请选择日期" class="sd-picker-start-time"></div>
  <div class="sd-picker-suffix">
    <!--v-if--><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
    <!--v-if-->
  </div>
</div>
`;

exports[`<date-picker> demo: > render [default-value] correctly 1`] = `
<div class="sd-picker sd-picker-size-medium sd:w-50 sd:mr-6 sd:mb-6" visible="false">
  <!--v-if-->
  <div class="sd-picker-input"><input placeholder="请选择日期" class="sd-picker-start-time" value="2019-06-03"></div>
  <div class="sd-picker-suffix"><span class="sd-icon-hover sd-picker-icon-hover sd-picker-clear-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-close" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"></path></svg></span><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
    <!--v-if-->
  </div>
</div>
<div class="sd-picker sd-picker-size-medium sd:w-60 sd:mr-6 sd:mb-6" visible="false">
  <!--v-if-->
  <div class="sd-picker-input"><input placeholder="请选择日期" class="sd-picker-start-time" readonly="" value="custom format: 2019-06-03"></div>
  <div class="sd-picker-suffix"><span class="sd-icon-hover sd-picker-icon-hover sd-picker-clear-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-close" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"></path></svg></span><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
    <!--v-if-->
  </div>
</div>
<div class="sd-picker sd-picker-size-medium sd:w-50 sd:mr-6 sd:mb-6" visible="false">
  <!--v-if-->
  <div class="sd-picker-input"><input placeholder="请选择日期" class="sd-picker-start-time" value="2019-06-03 08:00:00"></div>
  <div class="sd-picker-suffix"><span class="sd-icon-hover sd-picker-icon-hover sd-picker-clear-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-close" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"></path></svg></span><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
    <!--v-if-->
  </div>
</div>
<div class="sd-picker sd-picker-size-medium sd:w-50 sd:mr-6 sd:mb-6" visible="false">
  <!--v-if-->
  <div class="sd-picker-input"><input placeholder="请选择年份" class="sd-picker-start-time" value="2019"></div>
  <div class="sd-picker-suffix"><span class="sd-icon-hover sd-picker-icon-hover sd-picker-clear-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-close" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"></path></svg></span><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
    <!--v-if-->
  </div>
</div>
<div class="sd-picker sd-picker-size-medium sd:w-50 sd:mr-6 sd:mb-6" visible="false">
  <!--v-if-->
  <div class="sd-picker-input"><input placeholder="请选择月份" class="sd-picker-start-time" value="2019-06"></div>
  <div class="sd-picker-suffix"><span class="sd-icon-hover sd-picker-icon-hover sd-picker-clear-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-close" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"></path></svg></span><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
    <!--v-if-->
  </div>
</div>
<div class="sd-picker sd-picker-size-medium sd:w-50 sd:mr-6 sd:mb-6" visible="false">
  <!--v-if-->
  <div class="sd-picker-input"><input placeholder="请选择周" class="sd-picker-start-time" value="2019-31周"></div>
  <div class="sd-picker-suffix"><span class="sd-icon-hover sd-picker-icon-hover sd-picker-clear-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-close" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"></path></svg></span><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
    <!--v-if-->
  </div>
</div>
<div class="sd-picker sd-picker-range sd-picker-size-medium sd:w-90 sd:mr-6 sd:mb-6" visible="false">
  <!--v-if-->
  <div class="sd-picker-input sd-picker-input-active"><input placeholder="开始日期" value="2019-08-08 00:00:00"></div><span class="sd-picker-separator">-</span>
  <div class="sd-picker-input"><input placeholder="结束日期" value="2019-08-18 00:00:00"></div>
  <div class="sd-picker-suffix"><span class="sd-icon-hover sd-picker-icon-hover sd-picker-clear-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-close" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"></path></svg></span><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
    <!--v-if-->
  </div>
</div>
<div class="sd-picker sd-picker-range sd-picker-size-medium sd:w-75 sd:mb-6" visible="false">
  <!--v-if-->
  <div class="sd-picker-input sd-picker-input-active"><input placeholder="开始月份" value="2019-08"></div><span class="sd-picker-separator">-</span>
  <div class="sd-picker-input"><input placeholder="结束月份" value="2020-06"></div>
  <div class="sd-picker-suffix"><span class="sd-icon-hover sd-picker-icon-hover sd-picker-clear-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-close" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"></path></svg></span><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
    <!--v-if-->
  </div>
</div>
`;

exports[`<date-picker> demo: > render [disabled] correctly 1`] = `
<div class="sd-picker sd-picker-size-medium sd-picker-disabled sd:w-50 sd:mb-5" visible="false">
  <!--v-if-->
  <div class="sd-picker-input"><input disabled="" placeholder="请选择日期" class="sd-picker-start-time" value="2020-08-08"></div>
  <div class="sd-picker-suffix">
    <!--v-if--><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
    <!--v-if-->
  </div>
</div>
<br>
<div class="sd-picker sd-picker-range sd-picker-size-medium sd-picker-disabled sd:w-75 sd:mb-5" visible="false">
  <!--v-if-->
  <div class="sd-picker-input"><input disabled="" placeholder="开始日期" value="2020-08-08"></div><span class="sd-picker-separator">-</span>
  <div class="sd-picker-input sd-picker-input-active"><input disabled="" placeholder="结束日期" value="2020-08-18"></div>
  <div class="sd-picker-suffix"><span class="sd-icon-hover sd-picker-icon-hover sd-picker-clear-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-close" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"></path></svg></span><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
    <!--v-if-->
  </div>
</div>
<br>
<div class="sd-picker sd-picker-range sd-picker-size-medium sd:mb-5 sd:w-75" visible="false">
  <!--v-if-->
  <div class="sd-picker-input"><input disabled="" placeholder="开始日期" value="2020-08-08"></div><span class="sd-picker-separator">-</span>
  <div class="sd-picker-input sd-picker-input-active"><input placeholder="结束日期"></div>
  <div class="sd-picker-suffix">
    <!--v-if--><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
    <!--v-if-->
  </div>
</div>
<br>
<div class="sd-picker sd-picker-range sd-picker-size-medium sd:w-95" visible="false">
  <!--v-if-->
  <div class="sd-picker-input"><input disabled="" placeholder="开始日期" value="2020-08-08 02:02:02"></div><span class="sd-picker-separator">-</span>
  <div class="sd-picker-input sd-picker-input-active"><input placeholder="结束日期"></div>
  <div class="sd-picker-suffix">
    <!--v-if--><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
    <!--v-if-->
  </div>
</div>
`;

exports[`<date-picker> demo: > render [disabled-date] correctly 1`] = `
<div>
  <div class="sd-picker sd-picker-size-medium sd:w-50 sd:mr-6 sd:mb-6" visible="false">
    <!--v-if-->
    <div class="sd-picker-input"><input placeholder="请选择日期" class="sd-picker-start-time"></div>
    <div class="sd-picker-suffix">
      <!--v-if--><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
      <!--v-if-->
    </div>
  </div>
  <!---->
  <div class="sd-picker sd-picker-range sd-picker-size-medium sd:w-90 sd:mr-6 sd:mb-6" visible="false">
    <!--v-if-->
    <div class="sd-picker-input sd-picker-input-active"><input placeholder="开始日期"></div><span class="sd-picker-separator">-</span>
    <div class="sd-picker-input"><input placeholder="结束日期"></div>
    <div class="sd-picker-suffix">
      <!--v-if--><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
      <!--v-if-->
    </div>
  </div>
  <!---->
  <div class="sd-picker sd-picker-size-medium sd:w-50 sd:mr-6 sd:mb-6" visible="false">
    <!--v-if-->
    <div class="sd-picker-input"><input placeholder="请选择日期" class="sd-picker-start-time"></div>
    <div class="sd-picker-suffix">
      <!--v-if--><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
      <!--v-if-->
    </div>
  </div>
  <!---->
  <div class="sd-picker sd-picker-range sd-picker-size-medium sd:w-90 sd:mb-6" visible="false">
    <!--v-if-->
    <div class="sd-picker-input sd-picker-input-active"><input placeholder="开始日期"></div><span class="sd-picker-separator">-</span>
    <div class="sd-picker-input"><input placeholder="结束日期"></div>
    <div class="sd-picker-suffix">
      <!--v-if--><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
      <!--v-if-->
    </div>
  </div>
  <!---->
</div>
`;

exports[`<date-picker> demo: > render [disabled-date-advance] correctly 1`] = `
<div class="sd-picker sd-picker-range sd-picker-size-medium sd:w-75" visible="false">
  <!--v-if-->
  <div class="sd-picker-input sd-picker-input-active"><input placeholder="开始日期"></div><span class="sd-picker-separator">-</span>
  <div class="sd-picker-input"><input placeholder="结束日期"></div>
  <div class="sd-picker-suffix">
    <!--v-if--><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
    <!--v-if-->
  </div>
</div>
`;

exports[`<date-picker> demo: > render [extra] correctly 1`] = `
<div class="sd-picker sd-picker-size-medium sd:w-50 sd:mb-5" visible="false">
  <!--v-if-->
  <div class="sd-picker-input"><input placeholder="请选择日期" class="sd-picker-start-time"></div>
  <div class="sd-picker-suffix">
    <!--v-if--><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
    <!--v-if-->
  </div>
</div>
<br>
<div class="sd-picker sd-picker-range sd-picker-size-medium sd:w-90" visible="false">
  <!--v-if-->
  <div class="sd-picker-input sd-picker-input-active"><input placeholder="开始日期"></div><span class="sd-picker-separator">-</span>
  <div class="sd-picker-input"><input placeholder="结束日期"></div>
  <div class="sd-picker-suffix">
    <!--v-if--><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
    <!--v-if-->
  </div>
</div>
`;

exports[`<date-picker> demo: > render [month] correctly 1`] = `
<div class="sd-picker sd-picker-size-medium sd:w-50" visible="false">
  <!--v-if-->
  <div class="sd-picker-input"><input placeholder="请选择月份" class="sd-picker-start-time"></div>
  <div class="sd-picker-suffix">
    <!--v-if--><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
    <!--v-if-->
  </div>
</div>
`;

exports[`<date-picker> demo: > render [panel-only] correctly 1`] = `
<div>
  <div class="sd-picker-container sd-picker-container-panel-only sd:w-67" visible="false">
    <!--v-if-->
    <div class="sd-picker-panel-wrapper">
      <div class="sd-panel-date">
        <div class="sd-panel-date-inner">
          <div class="sd-picker-header">
            <div class="sd-picker-header-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-double-left" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
                <path d="M36.857 9.9 22.715 24.042l14.142 14.142M25.544 9.9 11.402 24.042l14.142 14.142"></path>
              </svg></div>
            <div class="sd-picker-header-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-left" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
                <path d="M32 8.4 16.444 23.956 32 39.513"></path>
              </svg></div>
            <div class="sd-picker-header-title"><span class="sd-picker-header-label">2019</span><span>-</span><span class="sd-picker-header-label">06</span></div>
            <div class="sd-picker-header-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-right" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
                <path d="m16 39.513 15.556-15.557L16 8.4"></path>
              </svg></div>
            <div class="sd-picker-header-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-double-right" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
                <path d="m11.143 38.1 14.142-14.142L11.143 9.816M22.456 38.1l14.142-14.142L22.456 9.816"></path>
              </svg></div>
          </div>
          <div class="sd-picker-week-list">
            <div class="sd-picker-week-list-item">日</div>
            <div class="sd-picker-week-list-item">一</div>
            <div class="sd-picker-week-list-item">二</div>
            <div class="sd-picker-week-list-item">三</div>
            <div class="sd-picker-week-list-item">四</div>
            <div class="sd-picker-week-list-item">五</div>
            <div class="sd-picker-week-list-item">六</div>
          </div>
          <div class="sd-picker-body">
            <div class="sd-picker-row">
              <!-- 一年中的第几周，只在 week 模式下显示 -->
              <div class="sd-picker-cell">
                <div class="sd-picker-date">
                  <div class="sd-picker-date-value">26</div>
                </div>
              </div><!-- 一年中的第几周，只在 week 模式下显示 -->
              <div class="sd-picker-cell">
                <div class="sd-picker-date">
                  <div class="sd-picker-date-value">27</div>
                </div>
              </div><!-- 一年中的第几周，只在 week 模式下显示 -->
              <div class="sd-picker-cell">
                <div class="sd-picker-date">
                  <div class="sd-picker-date-value">28</div>
                </div>
              </div><!-- 一年中的第几周，只在 week 模式下显示 -->
              <div class="sd-picker-cell">
                <div class="sd-picker-date">
                  <div class="sd-picker-date-value">29</div>
                </div>
              </div><!-- 一年中的第几周，只在 week 模式下显示 -->
              <div class="sd-picker-cell">
                <div class="sd-picker-date">
                  <div class="sd-picker-date-value">30</div>
                </div>
              </div><!-- 一年中的第几周，只在 week 模式下显示 -->
              <div class="sd-picker-cell">
                <div class="sd-picker-date">
                  <div class="sd-picker-date-value">31</div>
                </div>
              </div><!-- 一年中的第几周，只在 week 模式下显示 -->
              <div class="sd-picker-cell sd-picker-cell-in-view">
                <div class="sd-picker-date">
                  <div class="sd-picker-date-value">1</div>
                </div>
              </div>
            </div>
            <div class="sd-picker-row">
              <!-- 一年中的第几周，只在 week 模式下显示 -->
              <div class="sd-picker-cell sd-picker-cell-in-view">
                <div class="sd-picker-date">
                  <div class="sd-picker-date-value">2</div>
                </div>
              </div><!-- 一年中的第几周，只在 week 模式下显示 -->
              <div class="sd-picker-cell sd-picker-cell-in-view sd-picker-cell-selected">
                <div class="sd-picker-date">
                  <div class="sd-picker-date-value">3</div>
                </div>
              </div><!-- 一年中的第几周，只在 week 模式下显示 -->
              <div class="sd-picker-cell sd-picker-cell-in-view">
                <div class="sd-picker-date">
                  <div class="sd-picker-date-value">4</div>
                </div>
              </div><!-- 一年中的第几周，只在 week 模式下显示 -->
              <div class="sd-picker-cell sd-picker-cell-in-view">
                <div class="sd-picker-date">
                  <div class="sd-picker-date-value">5</div>
                </div>
              </div><!-- 一年中的第几周，只在 week 模式下显示 -->
              <div class="sd-picker-cell sd-picker-cell-in-view">
                <div class="sd-picker-date">
                  <div class="sd-picker-date-value">6</div>
                </div>
              </div><!-- 一年中的第几周，只在 week 模式下显示 -->
              <div class="sd-picker-cell sd-picker-cell-in-view">
                <div class="sd-picker-date">
                  <div class="sd-picker-date-value">7</div>
                </div>
              </div><!-- 一年中的第几周，只在 week 模式下显示 -->
              <div class="sd-picker-cell sd-picker-cell-in-view">
                <div class="sd-picker-date">
                  <div class="sd-picker-date-value">8</div>
                </div>
              </div>
            </div>
            <div class="sd-picker-row">
              <!-- 一年中的第几周，只在 week 模式下显示 -->
              <div class="sd-picker-cell sd-picker-cell-in-view">
                <div class="sd-picker-date">
                  <div class="sd-picker-date-value">9</div>
                </div>
              </div><!-- 一年中的第几周，只在 week 模式下显示 -->
              <div class="sd-picker-cell sd-picker-cell-in-view">
                <div class="sd-picker-date">
                  <div class="sd-picker-date-value">10</div>
                </div>
              </div><!-- 一年中的第几周，只在 week 模式下显示 -->
              <div class="sd-picker-cell sd-picker-cell-in-view">
                <div class="sd-picker-date">
                  <div class="sd-picker-date-value">11</div>
                </div>
              </div><!-- 一年中的第几周，只在 week 模式下显示 -->
              <div class="sd-picker-cell sd-picker-cell-in-view">
                <div class="sd-picker-date">
                  <div class="sd-picker-date-value">12</div>
                </div>
              </div><!-- 一年中的第几周，只在 week 模式下显示 -->
              <div class="sd-picker-cell sd-picker-cell-in-view">
                <div class="sd-picker-date">
                  <div class="sd-picker-date-value">13</div>
                </div>
              </div><!-- 一年中的第几周，只在 week 模式下显示 -->
              <div class="sd-picker-cell sd-picker-cell-in-view">
                <div class="sd-picker-date">
                  <div class="sd-picker-date-value">14</div>
                </div>
              </div><!-- 一年中的第几周，只在 week 模式下显示 -->
              <div class="sd-picker-cell sd-picker-cell-in-view">
                <div class="sd-picker-date">
                  <div class="sd-picker-date-value">15</div>
                </div>
              </div>
            </div>
            <div class="sd-picker-row">
              <!-- 一年中的第几周，只在 week 模式下显示 -->
              <div class="sd-picker-cell sd-picker-cell-in-view">
                <div class="sd-picker-date">
                  <div class="sd-picker-date-value">16</div>
                </div>
              </div><!-- 一年中的第几周，只在 week 模式下显示 -->
              <div class="sd-picker-cell sd-picker-cell-in-view">
                <div class="sd-picker-date">
                  <div class="sd-picker-date-value">17</div>
                </div>
              </div><!-- 一年中的第几周，只在 week 模式下显示 -->
              <div class="sd-picker-cell sd-picker-cell-in-view">
                <div class="sd-picker-date">
                  <div class="sd-picker-date-value">18</div>
                </div>
              </div><!-- 一年中的第几周，只在 week 模式下显示 -->
              <div class="sd-picker-cell sd-picker-cell-in-view">
                <div class="sd-picker-date">
                  <div class="sd-picker-date-value">19</div>
                </div>
              </div><!-- 一年中的第几周，只在 week 模式下显示 -->
              <div class="sd-picker-cell sd-picker-cell-in-view">
                <div class="sd-picker-date">
                  <div class="sd-picker-date-value">20</div>
                </div>
              </div><!-- 一年中的第几周，只在 week 模式下显示 -->
              <div class="sd-picker-cell sd-picker-cell-in-view">
                <div class="sd-picker-date">
                  <div class="sd-picker-date-value">21</div>
                </div>
              </div><!-- 一年中的第几周，只在 week 模式下显示 -->
              <div class="sd-picker-cell sd-picker-cell-in-view">
                <div class="sd-picker-date">
                  <div class="sd-picker-date-value">22</div>
                </div>
              </div>
            </div>
            <div class="sd-picker-row">
              <!-- 一年中的第几周，只在 week 模式下显示 -->
              <div class="sd-picker-cell sd-picker-cell-in-view">
                <div class="sd-picker-date">
                  <div class="sd-picker-date-value">23</div>
                </div>
              </div><!-- 一年中的第几周，只在 week 模式下显示 -->
              <div class="sd-picker-cell sd-picker-cell-in-view">
                <div class="sd-picker-date">
                  <div class="sd-picker-date-value">24</div>
                </div>
              </div><!-- 一年中的第几周，只在 week 模式下显示 -->
              <div class="sd-picker-cell sd-picker-cell-in-view">
                <div class="sd-picker-date">
                  <div class="sd-picker-date-value">25</div>
                </div>
              </div><!-- 一年中的第几周，只在 week 模式下显示 -->
              <div class="sd-picker-cell sd-picker-cell-in-view">
                <div class="sd-picker-date">
                  <div class="sd-picker-date-value">26</div>
                </div>
              </div><!-- 一年中的第几周，只在 week 模式下显示 -->
              <div class="sd-picker-cell sd-picker-cell-in-view">
                <div class="sd-picker-date">
                  <div class="sd-picker-date-value">27</div>
                </div>
              </div><!-- 一年中的第几周，只在 week 模式下显示 -->
              <div class="sd-picker-cell sd-picker-cell-in-view">
                <div class="sd-picker-date">
                  <div class="sd-picker-date-value">28</div>
                </div>
              </div><!-- 一年中的第几周，只在 week 模式下显示 -->
              <div class="sd-picker-cell sd-picker-cell-in-view">
                <div class="sd-picker-date">
                  <div class="sd-picker-date-value">29</div>
                </div>
              </div>
            </div>
            <div class="sd-picker-row">
              <!-- 一年中的第几周，只在 week 模式下显示 -->
              <div class="sd-picker-cell sd-picker-cell-in-view">
                <div class="sd-picker-date">
                  <div class="sd-picker-date-value">30</div>
                </div>
              </div><!-- 一年中的第几周，只在 week 模式下显示 -->
              <div class="sd-picker-cell">
                <div class="sd-picker-date">
                  <div class="sd-picker-date-value">1</div>
                </div>
              </div><!-- 一年中的第几周，只在 week 模式下显示 -->
              <div class="sd-picker-cell">
                <div class="sd-picker-date">
                  <div class="sd-picker-date-value">2</div>
                </div>
              </div><!-- 一年中的第几周，只在 week 模式下显示 -->
              <div class="sd-picker-cell">
                <div class="sd-picker-date">
                  <div class="sd-picker-date-value">3</div>
                </div>
              </div><!-- 一年中的第几周，只在 week 模式下显示 -->
              <div class="sd-picker-cell">
                <div class="sd-picker-date">
                  <div class="sd-picker-date-value">4</div>
                </div>
              </div><!-- 一年中的第几周，只在 week 模式下显示 -->
              <div class="sd-picker-cell">
                <div class="sd-picker-date">
                  <div class="sd-picker-date-value">5</div>
                </div>
              </div><!-- 一年中的第几周，只在 week 模式下显示 -->
              <div class="sd-picker-cell">
                <div class="sd-picker-date">
                  <div class="sd-picker-date-value">6</div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div class="sd-picker-footer">
        <!--v-if-->
        <div class="sd-picker-footer-now-wrapper"><a class="sd-link sd-link-status-normal sd-link-hoverless">
            <!--v-if--><span class="sd-link-content sd-ellipsis sd-ellipsis--single-line" style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"><span class="sd-ellipsis-content">今天</span></span>
          </a></div>
        <!--v-if-->
      </div>
    </div>
    <!--v-if-->
  </div>
  <div class="sd-picker-range-container sd-picker-range-container-panel-only sd:w-140 sd:mt-5">
    <!--v-if-->
    <div class="sd-picker-range-panel-wrapper">
      <!-- panel -->
      <div class="sd-picker-range">
        <div class="sd-picker-range-wrapper">
          <!-- week -->
          <!-- date -->
          <div class="sd-panel-date">
            <div class="sd-panel-date-inner">
              <div class="sd-picker-header">
                <div class="sd-picker-header-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-double-left" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
                    <path d="M36.857 9.9 22.715 24.042l14.142 14.142M25.544 9.9 11.402 24.042l14.142 14.142"></path>
                  </svg></div>
                <div class="sd-picker-header-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-left" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
                    <path d="M32 8.4 16.444 23.956 32 39.513"></path>
                  </svg></div>
                <div class="sd-picker-header-title"><span class="sd-picker-header-label">2019</span><span>-</span><span class="sd-picker-header-label">08</span></div>
                <div class="sd-picker-header-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-right" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
                    <path d="m16 39.513 15.556-15.557L16 8.4"></path>
                  </svg></div>
                <div class="sd-picker-header-icon sd-picker-header-icon-hidden">
                  <!--v-if-->
                </div>
              </div>
              <div class="sd-picker-week-list">
                <div class="sd-picker-week-list-item">日</div>
                <div class="sd-picker-week-list-item">一</div>
                <div class="sd-picker-week-list-item">二</div>
                <div class="sd-picker-week-list-item">三</div>
                <div class="sd-picker-week-list-item">四</div>
                <div class="sd-picker-week-list-item">五</div>
                <div class="sd-picker-week-list-item">六</div>
              </div>
              <div class="sd-picker-body">
                <div class="sd-picker-row">
                  <!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">28</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">29</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">30</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">31</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view sd-picker-cell-range-start sd-picker-cell-in-range">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">1</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view sd-picker-cell-in-range">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">2</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view sd-picker-cell-in-range">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">3</div>
                    </div>
                  </div>
                </div>
                <div class="sd-picker-row">
                  <!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view sd-picker-cell-in-range">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">4</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view sd-picker-cell-in-range">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">5</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view sd-picker-cell-in-range">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">6</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view sd-picker-cell-in-range">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">7</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view sd-picker-cell-in-range">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">8</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view sd-picker-cell-in-range">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">9</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view sd-picker-cell-in-range">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">10</div>
                    </div>
                  </div>
                </div>
                <div class="sd-picker-row">
                  <!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view sd-picker-cell-in-range">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">11</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view sd-picker-cell-in-range">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">12</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view sd-picker-cell-in-range">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">13</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view sd-picker-cell-in-range">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">14</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view sd-picker-cell-in-range">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">15</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view sd-picker-cell-in-range">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">16</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view sd-picker-cell-in-range">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">17</div>
                    </div>
                  </div>
                </div>
                <div class="sd-picker-row">
                  <!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view sd-picker-cell-in-range">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">18</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view sd-picker-cell-in-range">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">19</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view sd-picker-cell-in-range">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">20</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view sd-picker-cell-in-range">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">21</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view sd-picker-cell-in-range">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">22</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view sd-picker-cell-in-range">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">23</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view sd-picker-cell-in-range">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">24</div>
                    </div>
                  </div>
                </div>
                <div class="sd-picker-row">
                  <!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view sd-picker-cell-in-range">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">25</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view sd-picker-cell-in-range">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">26</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view sd-picker-cell-in-range">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">27</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view sd-picker-cell-in-range">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">28</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view sd-picker-cell-in-range">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">29</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view sd-picker-cell-in-range">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">30</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view sd-picker-cell-in-range">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">31</div>
                    </div>
                  </div>
                </div>
                <div class="sd-picker-row">
                  <!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">1</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">2</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">3</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">4</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">5</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">6</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">7</div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <!--v-if-->
            <!--v-if-->
          </div>
          <div class="sd-panel-date">
            <div class="sd-panel-date-inner">
              <div class="sd-picker-header">
                <div class="sd-picker-header-icon sd-picker-header-icon-hidden">
                  <!--v-if-->
                </div>
                <div class="sd-picker-header-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-left" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
                    <path d="M32 8.4 16.444 23.956 32 39.513"></path>
                  </svg></div>
                <div class="sd-picker-header-title"><span class="sd-picker-header-label">2020</span><span>-</span><span class="sd-picker-header-label">06</span></div>
                <div class="sd-picker-header-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-right" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
                    <path d="m16 39.513 15.556-15.557L16 8.4"></path>
                  </svg></div>
                <div class="sd-picker-header-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-double-right" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
                    <path d="m11.143 38.1 14.142-14.142L11.143 9.816M22.456 38.1l14.142-14.142L22.456 9.816"></path>
                  </svg></div>
              </div>
              <div class="sd-picker-week-list">
                <div class="sd-picker-week-list-item">日</div>
                <div class="sd-picker-week-list-item">一</div>
                <div class="sd-picker-week-list-item">二</div>
                <div class="sd-picker-week-list-item">三</div>
                <div class="sd-picker-week-list-item">四</div>
                <div class="sd-picker-week-list-item">五</div>
                <div class="sd-picker-week-list-item">六</div>
              </div>
              <div class="sd-picker-body">
                <div class="sd-picker-row">
                  <!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">31</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view sd-picker-cell-range-end sd-picker-cell-in-range">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">1</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">2</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">3</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">4</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">5</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">6</div>
                    </div>
                  </div>
                </div>
                <div class="sd-picker-row">
                  <!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">7</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">8</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">9</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">10</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">11</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">12</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">13</div>
                    </div>
                  </div>
                </div>
                <div class="sd-picker-row">
                  <!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">14</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">15</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">16</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">17</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">18</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">19</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">20</div>
                    </div>
                  </div>
                </div>
                <div class="sd-picker-row">
                  <!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">21</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">22</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">23</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">24</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">25</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">26</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">27</div>
                    </div>
                  </div>
                </div>
                <div class="sd-picker-row">
                  <!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">28</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">29</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell sd-picker-cell-in-view">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">30</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">1</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">2</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">3</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">4</div>
                    </div>
                  </div>
                </div>
                <div class="sd-picker-row">
                  <!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">5</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">6</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">7</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">8</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">9</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">10</div>
                    </div>
                  </div><!-- 一年中的第几周，只在 week 模式下显示 -->
                  <div class="sd-picker-cell">
                    <div class="sd-picker-date">
                      <div class="sd-picker-date-value">11</div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <!--v-if-->
            <!--v-if-->
          </div>
        </div>
      </div><!-- footer -->
      <div class="sd-picker-footer">
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
    </div>
    <!--v-if-->
  </div>
</div>
`;

exports[`<date-picker> demo: > render [prefix] correctly 1`] = `
<div>
  <div>
    <div class="sd-picker sd-picker-size-medium sd-picker-has-prefix sd:w-75" visible="false">
      <div class="sd-picker-prefix"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-info-circle" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M24 20v14m0-16v-4m18 10c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6s18 8.059 18 18Z"></path>
        </svg></div>
      <div class="sd-picker-input"><input placeholder="请选择日期" class="sd-picker-start-time"></div>
      <div class="sd-picker-suffix">
        <!--v-if--><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
        <!--v-if-->
      </div>
    </div>
    <!---->
  </div>
  <div class="sd-picker sd-picker-range sd-picker-size-medium sd-picker-has-prefix sd:mt-5 sd:w-100" visible="false">
    <div class="sd-picker-prefix"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-info-circle" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
        <path d="M24 20v14m0-16v-4m18 10c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6s18 8.059 18 18Z"></path>
      </svg></div>
    <div class="sd-picker-input sd-picker-input-active"><input placeholder="开始日期" value="2019-08-08 00:00:00"></div><span class="sd-picker-separator">-</span>
    <div class="sd-picker-input"><input placeholder="结束日期" value="2019-08-18 00:00:00"></div>
    <div class="sd-picker-suffix"><span class="sd-icon-hover sd-picker-icon-hover sd-picker-clear-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-close" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"></path></svg></span><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
      <!--v-if-->
    </div>
  </div>
  <!---->
</div>
`;

exports[`<date-picker> demo: > render [quarter] correctly 1`] = `
<div class="sd-picker sd-picker-size-medium sd:w-50" visible="false">
  <!--v-if-->
  <div class="sd-picker-input"><input placeholder="请选择季度" class="sd-picker-start-time"></div>
  <div class="sd-picker-suffix">
    <!--v-if--><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
    <!--v-if-->
  </div>
</div>
`;

exports[`<date-picker> demo: > render [range] correctly 1`] = `
<div class="sd-picker sd-picker-range sd-picker-size-medium sd:w-63.5 sd:mb-5" visible="false">
  <!--v-if-->
  <div class="sd-picker-input sd-picker-input-active"><input placeholder="开始日期"></div><span class="sd-picker-separator">-</span>
  <div class="sd-picker-input"><input placeholder="结束日期"></div>
  <div class="sd-picker-suffix">
    <!--v-if--><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
    <!--v-if-->
  </div>
</div>
<br>
<div class="sd-picker sd-picker-range sd-picker-size-medium sd:w-63.5 sd:mb-5" visible="false">
  <!--v-if-->
  <div class="sd-picker-input sd-picker-input-active"><input placeholder="开始周"></div><span class="sd-picker-separator">-</span>
  <div class="sd-picker-input"><input placeholder="结束周"></div>
  <div class="sd-picker-suffix">
    <!--v-if--><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
    <!--v-if-->
  </div>
</div>
<br>
<div class="sd-picker sd-picker-range sd-picker-size-medium sd:w-63.5 sd:mb-5" visible="false">
  <!--v-if-->
  <div class="sd-picker-input sd-picker-input-active"><input placeholder="开始月份"></div><span class="sd-picker-separator">-</span>
  <div class="sd-picker-input"><input placeholder="结束月份"></div>
  <div class="sd-picker-suffix">
    <!--v-if--><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
    <!--v-if-->
  </div>
</div>
<br>
<div class="sd-picker sd-picker-range sd-picker-size-medium sd:w-63.5 sd:mb-5" visible="false">
  <!--v-if-->
  <div class="sd-picker-input sd-picker-input-active"><input placeholder="开始年份"></div><span class="sd-picker-separator">-</span>
  <div class="sd-picker-input"><input placeholder="结束年份"></div>
  <div class="sd-picker-suffix">
    <!--v-if--><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
    <!--v-if-->
  </div>
</div>
<br>
<div class="sd-picker sd-picker-range sd-picker-size-medium sd:w-63.5 sd:mb-5" visible="false">
  <!--v-if-->
  <div class="sd-picker-input sd-picker-input-active"><input placeholder="开始季度"></div><span class="sd-picker-separator">-</span>
  <div class="sd-picker-input"><input placeholder="结束季度"></div>
  <div class="sd-picker-suffix">
    <!--v-if--><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
    <!--v-if-->
  </div>
</div>
<br>
<div class="sd-picker sd-picker-range sd-picker-size-medium sd:w-95" visible="false">
  <!--v-if-->
  <div class="sd-picker-input sd-picker-input-active"><input placeholder="开始日期"></div><span class="sd-picker-separator">-</span>
  <div class="sd-picker-input"><input placeholder="结束日期"></div>
  <div class="sd-picker-suffix">
    <!--v-if--><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
    <!--v-if-->
  </div>
</div>
`;

exports[`<date-picker> demo: > render [shortcuts] correctly 1`] = `
<div class="sd-picker sd-picker-size-medium sd:w-75 sd:mr-6 sd:mb-6" visible="false">
  <!--v-if-->
  <div class="sd-picker-input"><input placeholder="请选择日期" class="sd-picker-start-time"></div>
  <div class="sd-picker-suffix">
    <!--v-if--><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
    <!--v-if-->
  </div>
</div>
<div class="sd-picker sd-picker-size-medium sd:w-75 sd:mr-6 sd:mb-6" visible="false">
  <!--v-if-->
  <div class="sd-picker-input"><input placeholder="请选择月份" class="sd-picker-start-time"></div>
  <div class="sd-picker-suffix">
    <!--v-if--><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
    <!--v-if-->
  </div>
</div>
<div class="sd-picker sd-picker-range sd-picker-size-medium sd:w-100 sd:mr-6 sd:mb-6" visible="false">
  <!--v-if-->
  <div class="sd-picker-input sd-picker-input-active"><input placeholder="开始日期"></div><span class="sd-picker-separator">-</span>
  <div class="sd-picker-input"><input placeholder="结束日期"></div>
  <div class="sd-picker-suffix">
    <!--v-if--><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
    <!--v-if-->
  </div>
</div>
<div class="sd-picker sd-picker-range sd-picker-size-medium sd:w-75 sd:mb-6" visible="false">
  <!--v-if-->
  <div class="sd-picker-input sd-picker-input-active"><input placeholder="开始月份"></div><span class="sd-picker-separator">-</span>
  <div class="sd-picker-input"><input placeholder="结束月份"></div>
  <div class="sd-picker-suffix">
    <!--v-if--><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
    <!--v-if-->
  </div>
</div>
`;

exports[`<date-picker> demo: > render [shortcuts-position] correctly 1`] = `
<div class="sd-picker sd-picker-size-medium sd:w-63.5 sd:mr-6 sd:mb-5" visible="false">
  <!--v-if-->
  <div class="sd-picker-input"><input placeholder="请选择日期" class="sd-picker-start-time"></div>
  <div class="sd-picker-suffix">
    <!--v-if--><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
    <!--v-if-->
  </div>
</div>
<div class="sd-picker sd-picker-range sd-picker-size-medium sd:w-75 sd:mb-5" visible="false">
  <!--v-if-->
  <div class="sd-picker-input sd-picker-input-active"><input placeholder="开始日期"></div><span class="sd-picker-separator">-</span>
  <div class="sd-picker-input"><input placeholder="结束日期"></div>
  <div class="sd-picker-suffix">
    <!--v-if--><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
    <!--v-if-->
  </div>
</div>
<br>
<div class="sd-picker sd-picker-size-medium sd:w-63.5 sd:mr-6" visible="false">
  <!--v-if-->
  <div class="sd-picker-input"><input placeholder="请选择日期" class="sd-picker-start-time"></div>
  <div class="sd-picker-suffix">
    <!--v-if--><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
    <!--v-if-->
  </div>
</div>
<div class="sd-picker sd-picker-range sd-picker-size-medium sd:w-75" visible="false">
  <!--v-if-->
  <div class="sd-picker-input sd-picker-input-active"><input placeholder="开始日期"></div><span class="sd-picker-separator">-</span>
  <div class="sd-picker-input"><input placeholder="结束日期"></div>
  <div class="sd-picker-suffix">
    <!--v-if--><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
    <!--v-if-->
  </div>
</div>
`;

exports[`<date-picker> demo: > render [showtime] correctly 1`] = `
<div class="sd-picker sd-picker-size-medium sd:w-55 sd:mr-6 sd:mb-6" visible="false">
  <!--v-if-->
  <div class="sd-picker-input"><input placeholder="请选择日期" class="sd-picker-start-time"></div>
  <div class="sd-picker-suffix">
    <!--v-if--><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
    <!--v-if-->
  </div>
</div>
<div class="sd-picker sd-picker-size-medium sd:w-55 sd:mr-6 sd:mb-6" visible="false">
  <!--v-if-->
  <div class="sd-picker-input"><input placeholder="请选择日期" class="sd-picker-start-time"></div>
  <div class="sd-picker-suffix">
    <!--v-if--><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
    <!--v-if-->
  </div>
</div>
<div class="sd-picker sd-picker-range sd-picker-size-medium sd:w-90 sd:mr-6 sd:mb-6" visible="false">
  <!--v-if-->
  <div class="sd-picker-input sd-picker-input-active"><input placeholder="开始日期"></div><span class="sd-picker-separator">-</span>
  <div class="sd-picker-input"><input placeholder="结束日期"></div>
  <div class="sd-picker-suffix">
    <!--v-if--><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
    <!--v-if-->
  </div>
</div>
`;

exports[`<date-picker> demo: > render [size] correctly 1`] = `
<div class="sd:mb-5"><span class="sd-radio-group-button sd-radio-group-size-medium sd-radio-group-direction-horizontal"><label class="sd-radio-button"><input type="radio" class="sd-radio-target" value="mini"><span class="sd-radio-button-content">mini</span></label><label class="sd-radio-button sd-radio-checked"><input type="radio" checked="" class="sd-radio-target" value="small"><span class="sd-radio-button-content">small</span></label><label class="sd-radio-button"><input type="radio" class="sd-radio-target" value="medium"><span class="sd-radio-button-content">medium</span></label><label class="sd-radio-button"><input type="radio" class="sd-radio-target" value="large"><span class="sd-radio-button-content">large</span></label></span></div>
<div class="sd-picker sd-picker-size-small sd:w-63.5" visible="false">
  <!--v-if-->
  <div class="sd-picker-input"><input placeholder="请选择日期" class="sd-picker-start-time"></div>
  <div class="sd-picker-suffix">
    <!--v-if--><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
    <!--v-if-->
  </div>
</div>
`;

exports[`<date-picker> demo: > render [trigger-element] correctly 1`] = `
<div class="sd-space sd-space-horizontal sd-space-align-center" style="column-gap: 8px; row-gap: 8px;">
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->请选择日期
    </button>
    <!---->
  </div>
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->请选择日期范围
    </button>
    <!---->
  </div>
</div>
`;

exports[`<date-picker> demo: > render [week] correctly 1`] = `
<div class="sd-picker sd-picker-size-medium sd:w-50 sd:mr-6 sd:mb-6" visible="false">
  <!--v-if-->
  <div class="sd-picker-input"><input placeholder="请选择周" class="sd-picker-start-time"></div>
  <div class="sd-picker-suffix">
    <!--v-if--><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
    <!--v-if-->
  </div>
</div>
<div class="sd-picker sd-picker-size-medium sd:w-50 sd:mr-6 sd:mb-6" visible="false">
  <!--v-if-->
  <div class="sd-picker-input"><input placeholder="请选择周" class="sd-picker-start-time"></div>
  <div class="sd-picker-suffix">
    <!--v-if--><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
    <!--v-if-->
  </div>
</div>
`;

exports[`<date-picker> demo: > render [year] correctly 1`] = `
<div class="sd-picker sd-picker-size-medium sd:w-50" visible="false">
  <!--v-if-->
  <div class="sd-picker-input"><input placeholder="请选择年份" class="sd-picker-start-time"></div>
  <div class="sd-picker-suffix">
    <!--v-if--><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
    <!--v-if-->
  </div>
</div>
`;
